app/src/test/resources/programs/valid/foonctions/multipleNestedFunctions.exe
foo g() -> Int = {
    let a: Int = 10;
    foo f1() -> Int = a + 1;
    foo f2() -> Int = a + 2;
    foo f3(a: Int) -> Int = a + 3;
    foo f4() -> Int = {
        let a: Int = 1;
        a + 4
    }
    // Should return 36
    f1() + f2() + f3(5) + f4()
}

foo main() -> Int = {
    g()
}
