app/src/test/resources/programs/invalid/foonctions/duplicatedNamedArgument.exe
foo g(a: Int, b: Int) -> Int = a + b;

foo main() -> Int = {
    g(b=2, b=3)
}
